# Mimic

./: .gitignore  README.md  io.github.arijanj.Mimic.json  meson.build
.github/workflows/: build.yml  lint.yml
data/: io.github.arijanj.Mimic.gschema.xml  io.github.arijanj.Mimic.metainfo.xml.in
po/: POTFILES.in
src/: dialogs.py  main.py  meson.build  mimeapps.py  mimic.gresource.xml  mimic.in  shortcuts-dialog.blp  utils.py  widgets.py  window.blp
